--- a/main_menu.html
+++ b/main_menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menstrual Cycle Tracker</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,16 +31,22 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background: #ffc5c5;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      background: #ff69b4;
+      border-radius: 12px;
+      box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     h1, h2 {
       color: #333;
     }
     label {
-      display: block;
-      margin-bottom: 0.5rem;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
       font-weight: bold;
     }
     input, textarea, button {
@@ -52,14 +58,14 @@
       font-size: 1rem;
     }
     button {
-      background-color: #007BFF;
+      background-color: #ff69b4;
       color: white;
       font-weight: bold;
       cursor: pointer;
       border: none;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #ff69b4;
     }
     .card {
       padding: 1rem;
@@ -76,7 +82,10 @@
   <a href="#about">About</a>
 </div>
 <div class="container">
-  <h1 style="text-align: center; font-family: 'Playfair Display';">Sync Her Up</h1>
-  <p>A period cycle tracker!</p>
+  <h1 style="text-align: center; font-family: 'Raleway'; font-weight: bold; font-size: 40pt; color: white;">Sync Her Up</h1>
 </div>
+<div class="Menstrual Cycle Tracker">
+  <p style="text-align: center; font-family: 'Raleway'; color: #ff69b4;">a period cycle tracker, with personalized diet and exercise suggestions for you!</p>
+</div>
+
 </body>
