--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menstrual Cycle Tracker</title>
+    <title>SyncHerUp</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Add some basic styling to our calendar */
@@ -15,6 +16,7 @@
             width: 800px;
             margin: 0 auto;
         }
+
         .day {
             padding: 10px;
             border-radius: 5px;
@@ -24,36 +26,44 @@
             background-color: #ffe6f2;
             border: 1px solid #ddd;
         }
+
         .day:hover {
             background-color: #ffc5c5;
         }
+
         .selected {
             background-color: #ff99cc;
         }
+
         .arrow-button {
             cursor: pointer;
             font-size: 24px;
             font-weight: bold;
             color: #000;
         }
+
         .navbar {
             background-color: #ff69b4;
             color: white;
             padding: 1rem;
             text-align: center;
         }
+
         .navbar a {
             color: white;
             margin: 0 1rem;
             text-decoration: none;
             font-weight: bold;
         }
+
         .navbar a:hover {
             text-decoration: underline;
         }
+
         body {
             background-color: #f0f0f0;
         }
+
         .info-section {
             background-color: #ffe6f2;
             padding: 20px;
@@ -62,16 +72,20 @@
             width: 800px;
             margin: 0 auto;
         }
+
         .info-section h2 {
             color: #ff69b4;
         }
+
         .info-section p {
             color: #666;
             white-space: pre-wrap;
         }
+
         .error-message {
             color: #ff0000;
         }
+
         .days-of-week {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
@@ -81,6 +95,7 @@
             margin: 0 auto;
             background-color: #f0f0f0;
         }
+
         .day-of-week {
             padding: 10px;
             text-align: center;
@@ -89,12 +104,13 @@
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <a href="main_menu.html">Home</a>
         <a href="interactive_calendar.html">Tracker</a>
         <a href="#about">About</a>
-      </div>
+    </div>
     <h1 class="text-3xl text-center p-4" style="color: #ff69b4;">Menstrual Cycle Tracker</h1>
     <p class="text-lg text-center p-4">Please select the days of your most recent period. You can navigate through the months using the arrow buttons.</p>
     <div class="flex justify-between p-4" style="width: 800px; margin: 0 auto;">
@@ -114,11 +130,16 @@
     <div class="calendar" id="calendar"></div>
     <div class="flex p-4" style="width: 800px; margin: 0 auto;">
         <div class="mr-4">
-            <label for="cycle-length" class="block text-sm font-medium text-gray-700">Average Cycle Length (days):</label>
-            <input type="number" id="cycle-length" class="mt-1 block w-20 rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500 sm:text-sm" value="28" required>
+            <label for="cycle-length" class="block text-sm font-medium text-gray-700">Average Cycle Length
+                (days):</label>
+            <input type="number" id="cycle-length"
+                class="mt-1 block w-20 rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500 sm:text-sm"
+                value="28" required>
         </div>
-        <button id="generate-button" class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">Generate</button>
-        <button id="clear-button" class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded ml-2">Clear</button>
+        <button id="generate-button"
+            class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">Generate</button>
+        <button id="clear-button"
+            class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded ml-2">Clear</button>
     </div>
     <p id="error-message" class="error-message text-lg text-center p-4"></p>
     <div class="info-section" id="menstrual-cycle-info">
@@ -394,4 +415,5 @@
         renderCalendar();
     </script>
 </body>
+
 </html>
