--- a/groq_calendar.html
+++ b/groq_calendar.html
@@ -282,7 +282,7 @@
 
         // Function to generate personalized recommendations using Groq
             async function generatePersonalizedRecommendations(phase, cycleDay) {
-                const apiKey = document.getElementById('groq-api-key').value;
+                const apiKey = document.getElementById('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').value;
                 
                 if (!apiKey) {
                     alert('Please enter your Groq API key');
