--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -142,24 +142,39 @@
             class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded ml-2">Clear</button>
     </div>
     <p id="error-message" class="error-message text-lg text-center p-4"></p>
+
     <div class="info-section" id="menstrual-cycle-info">
-        <h2>Menstrual Cycle Info</h2>
+        <h2 style="display: flex; align-items: center; gap: 10px">
+            <img src="images/point.png" alt="bunny pointing" style="width: 100px; height: auto;">
+            Menstrual Cycle Info
+        </h2>
         <p id="menstrual-cycle-info-text"></p>
     </div>
+
+    
     <div class="info-section" id="period-length-info">
-        <h2>Period Length Info</h2>
+        <h2 style="display: flex; align-items: center; gap: 10px"></h2style>
+            <img src="images/up.png" alt="bunny smiling" style="width: 100px; height: auto;">
+            Period Length Info</h2>
         <p id="period-length-info-text"></p>
     </div>
+
     <div class="info-section" id="hormone-info">
-        <h2>Hormone Info</h2>
+        <h2 style="display: flex; align-items: center; gap: 10px">
+            <img src="images/point.png" alt="bunny pointing" style="width: 100px; height: auto;">
+            Hormone Info</h2>
         <p id="hormone-info-text"></p>
     </div>
     <div class="info-section" id="food-recommendations">
-        <h2>Food Recommendations</h2>
+        <h2 style="display: flex; align-items: center; gap: 10px">
+            <img src="images/food.png" alt="bunny eating" style="width: 100px; height: auto;">
+            Food Recommendations</h2>
         <p id="food-recommendations-text"></p>
     </div>
     <div class="info-section" id="exercise-recommendations">
-        <h2>Exercise Recommendations</h2>
+        <h2 style="display: flex; align-items: center; gap: 10px">
+            <img src="images/exercise.png" alt="bunny exercising" style="width: 100px; height: auto;">
+            Exercise Recommendations</h2>
         <p id="exercise-recommendations-text"></p>
     </div>
 
