changed main menu button

--- a/main_menu.html
+++ b/main_menu.html
@@ -119,7 +119,7 @@
   </h1> 
 </div>
 
-<a id ="button" href="login.html" class="button">Get Started!</a>
+<a id ="button" href="interactive_calendar.html" class="button">Get Started!</a>
 
 <p id="rcorners1">
   Use our user-friendly interface to input in the days of your current menstural cycle to get personalized tips on food and exercise, as well as information about your period!
