--- a/main_menu.html
+++ b/main_menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menstrual Cycle Tracker</title>
+  <title>SyncHerUp</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <style>
     body {
@@ -74,14 +74,14 @@
     .button {
       display: block; 
       width: fit-content; 
-      margin: 2rem auto; 
+      margin: 3rem auto; 
       background-color: #ff69b4;
       color: white;
       font-size: 1rem;
       font-weight: bold;
       padding: 10px 20px;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       text-align: center;
       text-decoration: none;
       cursor: pointer;
@@ -96,7 +96,7 @@
       border-radius: 25px;
       background: #fff;
       padding: 20px; 
-      max-width: 80%;
+      max-width: 50%;
       margin: 2rem auto; 
       text-align: center;
     }
@@ -110,8 +110,8 @@
   <a href="#about">About</a>
 </div>
 
-<div class="Menstrual Cycle Tracker">
-  <p style="text-align: center; font-family: 'Raleway'; color: #ff69b4;">a period cycle tracker, with personalized diet and exercise suggestions for you!</p>
+<div class="SyncHerUp">
+  <p style="text-align: center; font-family: 'Raleway'; color: #ff69b4;">get in sync with your menstrual cycle!</p>
 </div>
 
 <div class="container">
