added about page and updated some images

--- a/about.html
+++ b/about.html
@@ -116,26 +116,9 @@
   <a href="about.html">About</a>
 </div>
 
-<div class="SyncHerUp">
-  <p style="text-align: center; font-family: 'mine'; font-size: 15pt; color: #ffe6f2;">get in sync with your menstrual cycle!</p>
-</div>
-
-<div class="container">
-  <h1 style="text-align: center; font-family: 'Raleway'; font-weight: bold; font-size: 40pt; color: white;"><img style='height: 100%; width: 100%; object-fit: contain' id = "logo" src="images\logo.png" alt="sync her up logo">
-  </h1> 
-</div>
-
-<div class="container">
-  <h1 style="text-align: center;"><img src="images/up.png" alt="bunny smiling" style="width: 300px; height: auto;">
-  </h1>
-  <a id ="button" href="interactive_calendar.html" class="button">Get Started!</a>
-</div>
-
-
 <p id="rcorners1">
-  Use our user-friendly interface to input in the days of your current menstural cycle to get personalized tips on food and exercise, as well as information about your period!
-</p>
+    Our mission is to make destigmatize menstration and managing your cycles easier! Through our friendly and easy to pick up UI/UX, plan meals and exercise plans, as well as gain insight on information about your period through Sync Her Up!
+  </p>
 
-</body>
-
-</html>
+  <h1 style="text-align: center;"><img src="images/point.png" alt="bunny pointing" style="width: 300px; height: auto;">
+  </h1>
