--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -123,7 +123,7 @@
     <div class="navbar">
         <a href="main_menu.html">Home</a>
         <a href="interactive_calendar.html">Tracker</a>
-        <a href="#about">About</a>
+        <a href="about.html">About</a>
     </div>
     <h1 class="text-3xl text-center p-4" style="color: #ff69b4;">Menstrual Cycle Tracker</h1>
     <p class="text-sm text-center p-4">Please select the days of your most recent period. You can navigate through the months using the arrow buttons.</p>
@@ -175,7 +175,7 @@
 
     <div class="info-section" id="hormone-info">
         <h2 style="display: flex; align-items: center; gap: 10px">
-            <img src="images/point.png" alt="bunny pointing" style="width: 100px; height: auto;">
+            <img src="images/up.png" alt="bunny holding a thumbs up" style="width: 80px; height: auto;">
             Hormone Info
         </h2>
         <p id="hormone-info-text"></p>
