--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -174,7 +174,7 @@
 -->
 
     <div class="info-section" id="hormone-info">
-        <h2 style="display: flex; align-items: center; gap: 10px">
+        <h2 style="display: flex; align-items: center; gap: 13x">
             <img src="images/up.png" alt="bunny holding a thumbs up" style="width: 80px; height: auto;">
             Hormone Info
         </h2>
