--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 </div>
 
 <p id="rcorners1">
-    Our mission is to make destigmatize menstration and managing your cycles easier! Through our friendly and easy to pick up UI/UX, plan meals and exercise plans, as well as gain insight on information about your period through Sync Her Up!
+    Our mission is to destigmatize menstration and make managing your cycles easier! Through our friendly and easy to pick up UI/UX, plan meals and exercise plans, as well as gain insight on information about your period through Sync Her Up!
   </p>
 
   <h1 style="text-align: center;"><img src="images/point.png" alt="bunny pointing" style="width: 300px; height: auto;">
